fix header spacing

--- a/src/App.layout.scss
+++ b/src/App.layout.scss
@@ -118,9 +118,12 @@
 @media (max-width: 832px) {
   #root {
     grid-template-columns: 1fr;
-    grid-template-rows: var(--base-x-10) var(--base-x-4) var(--base-x-4) 1fr var(
-        --base
-      );
+    grid-template-rows:
+      var(--base-x-10)
+      var(--base-x-6)
+      var(--base-x-14)
+      1fr
+      var(--base);
     grid-template-areas:
       "header"
       "nav"
@@ -130,6 +133,7 @@
 
     #app-header {
       grid-template-columns: 1fr 1fr;
+      grid-auto-rows: 8rem;
       grid-template-areas: "title search";
     }
 
